generalizing scripts